[package]
name = "ortho60-keyberon"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.5", features = ["rt", "stm32f103" , "stm32-usbd"] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.6", features = ["device"] }
panic-semihosting = "0.5"
keyberon = "0.1.0"
cortex-m-rtic = "0.5"
generic-array = "0.13"
embedded-hal = "0.2"
usb-device = "0.2.0"
cortex-m-semihosting = "0.3.5"
